nvidia accelerated ds

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ MANIFEST
 
 #Secret files
 **/secret_*.txt
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
